--- a/res/css/components/navbar.css
+++ b/res/css/components/navbar.css
@@ -6,7 +6,7 @@
   padding: 0;
   height: 100vh;
   width: 15rem;
-  background-color: black;
+  background-color: #1F618D;
   position: fixed;
 }
 
@@ -39,8 +39,7 @@
 
 .nav-item:hover
 {
-  transition: background 300ms;
-  background-color: white;
+  background-color: #1A5276;
 }
 
 .nav-link
@@ -50,9 +49,11 @@
   display: flex;
   align-items: center;
 }
+
 .nav-link span
 {
   padding: 0 .75rem;
+  color: white;
 }
 
 .navbar-topMenu
