Completed Wireframe (Profile Edit)
Wireframe for the profile edit has been completed. Might revist though to remove some whitespace

--- a/res/css/components/navbar.css
+++ b/res/css/components/navbar.css
@@ -42,6 +42,11 @@
   background-color: #1A5276;
 }
 
+.nav-item-active
+{
+  background-color: #1A5276;
+}
+
 .nav-link
 {
   text-decoration: none;
