--- a/res/css/style.css
+++ b/res/css/style.css
@@ -48,6 +48,8 @@ section
   width: 100%;
   height: 100%;
   grid-column: 1 / span 2;
+  display: flex;
+  flex-direction: column;
 }
 
 #walkingStats
@@ -58,17 +60,60 @@ section
 
 .profileInformation
 {
-  width: 100%;
-  background-color: white;
+  max-width: 100%;
   grid-row: 0 / -1;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.userInformation
+{
+  max-height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-left: 2rem;
+}
+
+.input-group
+{
+  margin: .25rem;
 }
 
 .content
 {
   max-width: 100%;
+  max-height: 100%;
   display: flex;
   align-items: center;
-  background-color: white;
+  justify-content: center;
+  background-color: var(--primary);
+  padding: 10px;
+}
+
+.content-vertical
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--primary);
+  /* padding: 10px; */
+  overflow-y: scroll;
+  height: 100%;
+}
+
+figure
+{
+  margin: 0;
+  padding: 1rem;
+}
+
+figcaption
+{
+  text-align: center;
+  font-size: 16px;
 }
 
 img
