--- a/res/css/components/buttons.css
+++ b/res/css/components/buttons.css
@@ -5,6 +5,15 @@ button
   border: none;
   border-radius: 5px;
   padding: 0.5rem;
+  max-width: 100%;
+  max-height: 100%;
+  text-align: center;
+}
+
+button > a
+{
+  text-decoration: none;
+  color: inherit;
 }
 
 .btn-approve
@@ -28,4 +37,5 @@ button
 {
   display: flex;
   justify-content: center;
+
 }
