--- a/res/css/style.css
+++ b/res/css/style.css
@@ -23,9 +23,111 @@ body,html
 
 main
 {
-  margin: 0 1rem 0 16rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  margin: 0 0 0 15rem;
+  padding: 1.5rem 2.5rem;
+}
+
+#events
+{
+  display: flex;
+  flex-direction: column;
+}
+
+.event
+{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.event-selected
+{
+  background-color: darkgray;
+}
+
+.event td:first-child
+{
+  width: 50%;
+}
+.event td:nth-child(2)
+{
+  width: 10%;
+}
+.event td:nth-child(3)
+{
+  width: 30%;
+}
+.event td:last-child
+{
+  width: 10%;
+}
+
+.event:nth-child(2n)
+{
+  background-color: gray;
+}
+
+.event-contents
+{
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.event-edit
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 1rem;
+}
+
+.event-edit-input
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.event-edit .buttonGroup
+{
+  flex-direction: column;
+  padding-left: 1rem;
+  min-width: 10%;
+}
+
+.event tr
+{
+  background-color: inherit !important;
+}
+
+
+.sectionFooter
+{
+  background-color: var(--navbar-topMenu-active);
+  border-radius: 0 0 10px 10px;
+  padding: .25rem;
+}
+
+#announcements
+{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 1rem 1rem;
+}
+
+#announcementsFeed
+{
+  grid-column: 1 / span 2 ;
+  display: flex;
+  flex-direction: column;
+}
+
+#createAnnouncements
+{
+  grid-column: 1/ span 3;
 }
 
 .container
@@ -35,6 +137,40 @@ main
   grid-column-gap: 1rem;
   grid-row-gap:1rem;
   grid-template-rows: 50vh auto;
+}
+
+.informationRow
+{
+  background-color: white !important;
+}
+.informationRow:nth-child(2n)
+{
+  background-color: gray !important;
+}
+
+.informationRow
+{
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.informationRow h2,p
+{
+  font-size: inherit;
+}
+.informationRow p
+{
+  margin-left: auto;
+  padding-right: 2.5rem;
+}
+.informationRow h2
+{
+  padding-left: 2.5rem;
+}
+
+.information
+{
+  background-color: var(--primary);
 }
 
 section
@@ -107,7 +243,7 @@ section
 figure
 {
   margin: 0;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
 }
 
 figcaption
