--- a/res/css/components/buttons.css
+++ b/res/css/components/buttons.css
@@ -37,5 +37,15 @@ button > a
 {
   display: flex;
   justify-content: center;
+}
 
+.bg-stretch
+{
+  width: 100%;
+}
+
+.buttonGroup-vertical
+{
+  flex-direction: column;
+  max-width: 100%;
 }
