--- a/res/css/components/input.css
+++ b/res/css/components/input.css
@@ -2,8 +2,9 @@
 {
   max-width: 100%;
   max-height: 100%;
+  padding: 10px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 .input-group-vertical
@@ -13,22 +14,49 @@
 .input-group input
 {
   font-family: "Calibri";
-  padding: 10px;
   height: 100%;
   max-width: 100%;
+  width: 100%;
   font-size: inherit;
   border: 0;
   border-radius: 0 10px 10px 0;
-  margin: 0;
+  margin: 5px 0;
+  padding: 0 .5rem;
   outline: none;
 }
 .input-group span
 {
-  padding: 10px;
+  height: 100%;
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
   font-size: inherit;
   background-color: gray;
   border-radius: 10px 0 0 10px;
   height: 100%;
+  margin: 5px 0;
+  padding: 0 .5rem;
+}
+
+.input-group select
+{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: url('../../imgs/imageSmallSquare.jpg') 96% / 5% no-repeat;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  text-align: center;
+  border-radius: 0 10px 10px 0;
+
+
+  outline: 0;
+  border: 0;
+
+  margin: 5px 0;
+  padding: 0 .5rem;
 }
 
 .span-top
@@ -58,7 +86,7 @@
   width: 100%;
 }
 
-.input-group input:focus,textarea:focus
+.input-group input:focus,textarea:focus,select:focus
 {
   background-color: lightgray;
 }
