--- a/res/css/style.css
+++ b/res/css/style.css
@@ -39,6 +39,21 @@ main
   flex-direction: column;
 }
 
+#main-members
+{
+  display: grid;
+  grid-row-gap: 1rem;
+}
+
+.profileContent
+{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-row-gap: 1rem;
+  background-color: var(--primary);
+  padding: 10px;
+}
+
 .news
 {
   background-color: gray;
@@ -171,7 +186,7 @@ main
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1rem;
-  grid-row-gap:1rem;
+  grid-row-gap: 1rem;
   grid-template-rows: 50vh auto;
 }
 
@@ -239,19 +254,29 @@ section
   flex-direction: column;
 }
 
+.profileContent > .buttonGroup
+{
+  grid-column: 1/-1;
+}
+
 .userInformation
 {
-  max-height: 100%;
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  margin-left: 2rem;
+  align-content: center;
+  justify-content: center;
 }
 
-.input-group
+#editProfile .content
 {
-  margin: .25rem;
+  padding: 1rem;
+}
+
+#editProfile .content > .buttonGroup
+{
+  justify-content: center;
+  width: 40%;
 }
 
 .content
@@ -262,7 +287,6 @@ section
   align-items: center;
   justify-content: center;
   background-color: var(--primary);
-  padding: 10px;
 }
 
 .content-vertical
