--- a/res/css/style.css
+++ b/res/css/style.css
@@ -71,6 +71,12 @@ main
     margin-right: 1rem;
 }
 
+span.active,span.semi-active,span.inactive
+{
+  padding: .75rem;
+  border-radius: 15px;
+}
+
 .news tr
 {
   background-color: inherit !important;
@@ -80,9 +86,21 @@ main
 {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-content: center;
   flex: 2;
 }
+
+.news-edit-input>.input-group>span,.news-edit-input>.input-group>input
+{
+  padding: .5rem .5rem;
+}
+
+.hidden
+{
+  display: none;
+}
+
+
 
 .event
 {
@@ -95,22 +113,57 @@ main
 {
   background-color: darkgray;
 }
+.event-edit-input > .input-group-vertical
+{
+  width: 90%;
+}
+.edit-status
+{
+  width: 20%;
+}
+.event-contents td
+{
+  text-align: center;
+}
 
-.event td:first-child
+.event-contents td
 {
-  width: 50%;
+  padding: .25rem .5rem;
 }
-.event td:nth-child(2)
+
+.event-contents tbody th:nth-child(1)
+{
+  width: 15%;
+}
+.event-contents td:nth-child(2)
+{
+  width: 5%;
+}
+.event-contents td:nth-child(3)
+{
+  width: 12%;
+}
+.event-contents td:nth-child(4)
 {
   width: 10%;
 }
-.event td:nth-child(3)
-{
-  width: 30%;
-}
-.event td:last-child
+.event-contents td:nth-child(5)
 {
   width: 10%;
+}
+.event-contents td:nth-child(7)
+{
+  width: 5%;
+}
+
+.pictureCell
+{
+  width: 5%;
+}
+
+.textCell
+{
+  width: 40%;
 }
 
 .event:nth-child(2n)
@@ -137,7 +190,7 @@ main
 .event-edit-input
 {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -265,7 +318,7 @@ section
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 #editProfile .content
@@ -376,6 +429,7 @@ td > img
 .active
 {
   background-color: green;
+  color: white;
 }
 .semi-active
 {
@@ -384,4 +438,11 @@ td > img
 .inactive
 {
   background-color: red;
+  color: white;
+}
+
+.row
+{
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
