Updating to Specification (1)
Updating certain pages to fufil requirements of specification

--- a/res/css/components/buttons.css
+++ b/res/css/components/buttons.css
@@ -1,4 +1,4 @@
-button
+button, .btn
 {
   padding:0;
   border: none;
@@ -9,12 +9,13 @@ button
   text-align: center;
   cursor: pointer;
   margin: 5px;
-}
-
-button > a
-{
   text-decoration: none;
   color: inherit;
+}
+
+button:hover, .btn:hover
+{
+  filter: brightness(110%);
 }
 
 .btn-approve
