Revert "Updating to Specification (1)"
This reverts commit 38505989e3182f1c82fc7b105347910ddff9a2f2.

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -240,6 +240,7 @@ span.active,span.semi-active,span.inactive
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
+  grid-template-rows: 50vh auto;
 }
 
 .informationRow
@@ -348,7 +349,8 @@ section
   align-items: center;
   background-color: var(--primary);
   /* padding: 10px; */
-  overflow-y: auto;
+  overflow-y: scroll;
+  height: 100%;
 }
 
 figure
@@ -442,5 +444,5 @@ td > img
 .row
 {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
 }
