--- a/res/css/components/buttons.css
+++ b/res/css/components/buttons.css
@@ -1,4 +1,4 @@
-button, .btn
+button
 {
   padding:0;
   border: none;
@@ -9,13 +9,12 @@ button, .btn
   text-align: center;
   cursor: pointer;
   margin: 5px;
-  text-decoration: none;
-  color: inherit;
 }
 
-button:hover, .btn:hover
+button > a
 {
-  filter: brightness(110%);
+  text-decoration: none;
+  color: inherit;
 }
 
 .btn-approve
