--- a/res/css/components/buttons.css
+++ b/res/css/components/buttons.css
@@ -11,11 +11,16 @@ button, .btn
   margin: 5px;
   text-decoration: none;
   color: inherit;
+  white-space: nowrap;
+  font-size: 15px;
+  font-family: inherit;
 }
 
-button:hover, .btn:hover
+button:hover, .btn:hover, button:focus, .btn:focus
 {
   filter: brightness(110%);
+  border: none;
+  outline: none;
 }
 
 .btn-approve
@@ -44,6 +49,19 @@ button:hover, .btn:hover
 .bg-stretch
 {
   width: 100%;
+}
+
+.btn-chevron
+{
+  padding: 0;
+  margin: 0;
+  background: none;
+  transition: transform 250ms;
+}
+
+.btn-chevron:hover
+{
+  transform: rotate(180deg);
 }
 
 .buttonGroup-vertical
