--- a/res/css/components/input.css
+++ b/res/css/components/input.css
@@ -1,5 +1,4 @@
-.input-group
-{
+.input-group {
   max-width: 100%;
   max-height: 100%;
   padding: 10px;
@@ -7,8 +6,8 @@
   justify-content: flex-start;
   align-items: center;
 }
-.input-group-vertical
-{
+
+.input-group-vertical {
   max-width: 100%;
   max-height: 100%;
   padding: 10px;
@@ -17,8 +16,8 @@
   align-items: center;
   flex-direction: column;
 }
-.input-group input
-{
+
+.input-group input {
   font-family: "Calibri";
   height: 100%;
   max-width: 100%;
@@ -29,9 +28,17 @@
   margin: 5px 0;
   padding: 0 .5rem;
   outline: none;
+  background-color: white;
 }
-.input-group span, .input-group-vertical span
-{
+
+.input-group input[type='file'] {
+  text-align: center;
+  text-indent: -999em;
+  outline: none;
+  cursor: pointer;
+}
+
+.input-group span, .input-group-vertical span, .input-group label, .input-group-vertical label {
   height: 100%;
   display: inline-flex;
   align-items: center;
@@ -44,8 +51,7 @@
   white-space: nowrap;
 }
 
-.input-group select
-{
+.input-group select {
   -webkit-appearance: none;
   -moz-appearance: none;
   cursor: pointer;
@@ -62,8 +68,7 @@
   padding: 0 .5rem;
 }
 
-.span-top
-{
+.span-top {
   border-radius: 10px 10px 0 0 !important;
   width: 100%;
   display: flex !important;
@@ -73,8 +78,7 @@
   margin: 0 !important;
 }
 
-.input-group-vertical textarea
-{
+.input-group-vertical textarea {
   font-family: "Calibri";
   padding: 10px;
   height: 100%;
@@ -86,13 +90,12 @@
   outline: none;
   resize: none;
 }
-.input-group-vertical .container
-{
+
+.input-group-vertical .container {
   display: flex;
   width: 100%;
 }
 
-.input-group input:focus,input:hover,textarea:focus,textarea:hover,select:focus,select:hover
-{
+.input-group input:focus, .input-group input:hover, .input-group-vertical textarea:focus, .input-group-vertical textarea:hover, .input-group select:focus, .input-group select:hover {
   background-color: lightgray;
 }
