--- a/res/css/style.css
+++ b/res/css/style.css
@@ -2,8 +2,7 @@
 @import "components/buttons.css";
 @import "components/input.css";
 
-:root
-{
+:root {
   font-size: 18px;
   font-family: "Calibri";
   --navbar-topMenu: #AAB7B8;
@@ -12,8 +11,8 @@
   --darker: #808B96;
   --secondary: #99A3A4;
 }
-body,html
-{
+
+body, html {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -21,32 +20,34 @@ body,html
   background-color: lightgray;
 }
 
-main
-{
+main {
   margin: 0 0 0 15rem;
   padding: 1.5rem 2.5rem;
 }
 
-#events
-{
+#events {
   display: flex;
   flex-direction: column;
 }
 
-#main-news
-{
+#main-news {
   display: flex;
   flex-direction: column;
 }
 
-#main-members
-{
+#main-members {
   display: grid;
   grid-row-gap: 1rem;
 }
 
-.profileContent
-{
+#main-newsPost {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.profileContent {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-row-gap: 1rem;
@@ -54,236 +55,250 @@ main
   padding: 10px;
 }
 
-.news
-{
+.news {
   background-color: gray;
 }
-.news:nth-child(2n)
-{
-  background-color: darkgray !important;
-}
 
-.news-contents
-{
-    display: flex;
-    align-items: center;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-span.active,span.semi-active,span.inactive
-{
-  padding: .75rem;
-  border-radius: 15px;
-}
-
-.news tr
-{
-  background-color: inherit !important;
-}
-
-.news-edit-input
-{
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  flex: 2;
-}
-
-.news-edit-input>.input-group>span,.news-edit-input>.input-group>input
-{
-  padding: .5rem .5rem;
-}
-
-.hidden
-{
-  display: none;
-}
-
-
-
-.event
-{
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-}
-
-.event-selected
-{
+.news:nth-child(2n) {
   background-color: darkgray;
 }
-.event-edit-input > .input-group-vertical
-{
-  width: 90%;
-}
-.edit-status
-{
-  width: 20%;
-}
-.event-contents td
-{
-  text-align: center;
-}
 
-.event-contents td
-{
-  padding: .25rem .5rem;
-}
-
-.event-contents tbody th:nth-child(1)
-{
-  width: 15%;
-}
-.event-contents td:nth-child(2)
-{
-  width: 5%;
-}
-.event-contents td:nth-child(3)
-{
-  width: 12%;
-}
-.event-contents td:nth-child(4)
-{
-  width: 10%;
-}
-.event-contents td:nth-child(5)
-{
-  width: 10%;
-}
-.event-contents td:nth-child(7)
-{
-  width: 5%;
-}
-
-.pictureCell
-{
-  width: 5%;
-}
-
-.textCell
-{
-  width: 40%;
-}
-
-.event:nth-child(2n)
-{
-  background-color: gray;
-}
-
-.event-contents
-{
+.news-contents {
   display: flex;
   align-items: center;
   margin-left: 1rem;
   margin-right: 1rem;
 }
 
-.event-edit
-{
+span.active, span.semi-active, span.inactive {
+  padding: .75rem;
+  border-radius: 15px;
+}
+
+.news tr {
+  background-color: inherit !important;
+}
+
+.newsPost-info {
+  text-align: center;
+  margin: 1rem 1rem;
+  background-color: #DDD;
+  border-radius: .5rem;
+  border: 1.5px solid #999;
+  padding: .5rem;
+}
+
+.newsPost-info h2, .newsPost-info p {
+  margin: 0;
+}
+
+.newsPost-info p {
+  padding-top: .5rem;
+}
+
+.news-edit-input {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  flex: 2;
+}
+
+.news-edit-input>.input-group>span, .news-edit-input>.input-group>input {
+  padding: .5rem .5rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.event {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.event-selected {
+  background-color: darkgray;
+}
+
+.event-edit-input>.input-group-vertical {
+  width: 90%;
+}
+
+.edit-status {
+  width: 20%;
+}
+
+.event-contents td {
+  text-align: center;
+}
+
+.event-contents td {
+  padding: .25rem .5rem;
+}
+
+.event-contents tbody th:nth-child(1) {
+  width: 15%;
+}
+
+.event-contents td:nth-child(2) {
+  width: 5%;
+}
+
+.event-contents td:nth-child(3) {
+  width: 12%;
+}
+
+.event-contents td:nth-child(4) {
+  width: 10%;
+}
+
+.event-contents td:nth-child(5) {
+  width: 10%;
+}
+
+.event-contents td:nth-child(7) {
+  width: 5%;
+}
+
+.pictureCell {
+  width: 5%;
+}
+
+.textCell {
+  width: 40%;
+}
+
+.event:nth-child(2n) {
+  background-color: gray;
+}
+
+.event-contents {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.event-edit {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 1rem 1rem;
 }
 
-.event-edit-input
-{
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-    flex-wrap: wrap;
+.event-edit-input {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.event-edit .buttonGroup
-{
+.event-edit .buttonGroup {
   flex-direction: column;
   padding-left: 1rem;
   min-width: 10%;
 }
 
-.event tr
-{
+.news-edit-input>.input-group-vertical {
+  width: 90%;
+}
+
+.news-edit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: .25rem;
+  background-color: inherit;
+}
+
+.news-selected {
+  background-color: #BBB !important
+}
+
+.news-edit-input {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.news-edit .buttonGroup {
+  flex-direction: column;
+  padding-left: 1rem;
+  min-width: 10%;
+}
+
+.event tr {
   background-color: inherit !important;
 }
 
-
-.sectionFooter
-{
+.sectionFooter {
   background-color: var(--navbar-topMenu-active);
   border-radius: 0 0 10px 10px;
   padding: .25rem;
 }
 
-#announcements
-{
+#announcements {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem 1rem;
 }
 
-#announcementsFeed
-{
-  grid-column: 1 / span 2 ;
+#announcementsFeed {
+  grid-column: 1 / span 2;
   display: flex;
   flex-direction: column;
 }
 
-#createAnnouncements
-{
+#createAnnouncements {
   grid-column: 1/ span 3;
 }
 
-.container
-{
+.container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
 }
 
-.informationRow
-{
+.informationRow {
   background-color: white !important;
 }
-.informationRow:nth-child(2n)
-{
+
+.informationRow:nth-child(2n) {
   background-color: gray !important;
 }
 
-.informationRow
-{
+.informationRow {
   width: 100%;
   display: flex;
   align-items: center;
 }
-.informationRow h2,p
-{
+
+.informationRow h2, p {
   font-size: inherit;
 }
-.informationRow p
-{
+
+.informationRow p {
   margin-left: auto;
   padding-right: 2.5rem;
 }
-.informationRow h2
-{
+
+.informationRow h2 {
   padding-left: 2.5rem;
 }
 
-.information
-{
+.information {
   background-color: var(--primary);
 }
 
-section
-{
+section {
   width: 100%;
   height: 100%;
 }
 
-#editProfile
-{
+#editProfile {
   width: 100%;
   height: 100%;
   grid-column: 1 / span 2;
@@ -291,14 +306,12 @@ section
   flex-direction: column;
 }
 
-#walkingStats
-{
+#walkingStats {
   height: 100%;
   grid-column: 1 / span 3;
 }
 
-.profileInformation
-{
+.profileInformation {
   max-width: 100%;
   grid-row: 0 / -1;
   max-height: 100%;
@@ -306,13 +319,11 @@ section
   flex-direction: column;
 }
 
-.profileContent > .buttonGroup
-{
+.profileContent>.buttonGroup {
   grid-column: 1/-1;
 }
 
-.userInformation
-{
+.userInformation {
   max-width: 100%;
   display: flex;
   flex-direction: column;
@@ -320,19 +331,16 @@ section
   justify-content: space-around;
 }
 
-#editProfile .content
-{
+#editProfile .content {
   padding: 1rem;
 }
 
-#editProfile .content > .buttonGroup
-{
+#editProfile .content>.buttonGroup {
   justify-content: center;
   width: 40%;
 }
 
-.content
-{
+.content {
   max-width: 100%;
   max-height: 100%;
   display: flex;
@@ -341,8 +349,7 @@ section
   background-color: var(--primary);
 }
 
-.content-vertical
-{
+.content-vertical {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -351,96 +358,137 @@ section
   overflow-y: auto;
 }
 
-figure
-{
+figure {
   margin: 0;
   padding: 0.5rem 1rem;
 }
 
-figcaption
-{
+figcaption {
   text-align: center;
   font-size: 16px;
 }
 
-img
-{
+img {
   max-width: 100%;
 }
 
-.rounded
-{
+.rounded {
   border-radius: 50%;
 }
 
-.sectionHeader
-{
+.sectionHeader {
   border-radius: 10px 10px 0 0;
   background-color: var(--navbar-topMenu-active);
   padding: 15px 1rem;
 }
-.sectionHeader > h1
-{
-  margin:0;
-  text-align: center;;
+
+.sectionHeader>h1 {
+  margin: 0;
+  text-align: center;
+  ;
 }
 
-table
-{
+table {
   border-spacing: 0px;
   margin: 0;
   padding: 0;
   width: 100%;
   overflow-x: auto;
 }
-thead tr
-{
+
+thead tr {
   background-color: var(--darker);
 }
-tr
-{
+
+tr {
   background-color: var(--primary);
 }
 
-tr:nth-child(2n)
-{
+tr:nth-child(2n) {
   background-color: var(--secondary);
 }
-th
-{
+
+th {
   text-align: center;
   padding: 10px;
 }
 
-td
-{
+td {
   padding: 5px;
   text-align: center;
   font-size: 16px;
   font-family: "Calibri";
 }
 
-td > img
-{
+td>img {
   max-width: 100%;
 }
-.active
-{
+
+.active {
   background-color: green;
   color: white;
 }
-.semi-active
-{
+
+.semi-active {
   background-color: orange;
 }
-.inactive
-{
+
+.inactive {
   background-color: red;
   color: white;
 }
 
-.row
-{
+.row {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.row-span {
+  grid-column: 1 /-1;
+  /* background-color: red; */
+}
+
+#newsfeed th {
+  width: auto;
+  padding: .5rem 1.5rem;
+  white-space: nowrap;
+}
+
+.newsPost-contents {
+  display: flex;
+  flex-direction: column;
+  background-color: #BBB;
+}
+
+#announcementsFeed th:nth-child(n)
+{
+  width: 15%;
+}
+
+#announcementsFeed th:nth-child(3)
+{
+  width: auto;
+}
+
+
+#main-login
+{
+  margin: 0;
+}
+
+.banner
+{
+  padding: .25rem;
+}
+
+.column
+{
+  display: flex;
+  flex-direction: column;
+}
+
+.login-contents
+{
+  background-color: #BBB;
+  padding: 1rem;
 }
