--- a/res/css/style.css
+++ b/res/css/style.css
@@ -55,6 +55,18 @@ main {
   padding: 10px;
 }
 
+.profileContent .rounded
+{
+  margin: auto;
+}
+
+figure > img
+{
+  display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
 .news {
   background-color: gray;
 }
@@ -491,4 +503,43 @@ td>img {
 {
   background-color: #BBB;
   padding: 1rem;
+}
+.section-contents
+{
+  background-color: #BBB;
+  padding: .5rem;
+}
+
+.section-contents .row, .section-contents .flex-row
+{
+  padding: .25rem 0;
+}
+
+.figure-container
+{
+  background-color: #CCC;
+  border-radius: .5rem;
+  padding: 10px;
+  border: 2px solid #AAA;
+}
+
+.figure-container:hover
+{
+  background-color: #AAA;
+}
+.figure-container > figcaption
+{
+  padding: .5rem 0 0 0;
+  /* background-color: #BBB; */
+}
+
+.flex-row
+{
+  display: flex;
+}
+
+#main-home
+{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
