--- a/res/css/style.css
+++ b/res/css/style.css
@@ -12,6 +12,7 @@
   --secondary: #99A3A4;
 }
 
+/* DIRECT ELEMENT STYLING */
 body, html {
   width: 100%;
   height: 100%;
@@ -25,6 +26,73 @@ main {
   padding: 1.5rem 2.5rem;
 }
 
+figure {
+  margin: 0;
+  padding: 0.5rem 1rem;
+}
+
+figure>img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 16px;
+}
+
+img {
+  max-width: 100%;
+}
+
+span.active, span.semi-active, span.inactive {
+  padding: .75rem;
+  border-radius: 15px;
+}
+
+section {
+  width: 100%;
+  height: 100%;
+}
+
+table {
+  border-spacing: 0px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: auto;
+}
+
+thead tr {
+  background-color: var(--darker);
+}
+
+tr {
+  background-color: var(--primary);
+}
+
+tr:nth-child(2n) {
+  background-color: var(--secondary);
+}
+
+th {
+  text-align: center;
+  padding: 10px;
+}
+
+td {
+  padding: 5px;
+  text-align: center;
+  font-size: 16px;
+  font-family: "Calibri";
+}
+
+td>img {
+  max-width: 100%;
+}
+
+/* ID ELEMENT STYLING */
 #events {
   display: flex;
   flex-direction: column;
@@ -47,6 +115,81 @@ main {
   align-items: center;
 }
 
+#main-login {
+  margin: 0;
+}
+
+#announcements {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem 1rem;
+}
+
+#announcementsFeed {
+  grid-column: 1 / span 3;
+  display: flex;
+  flex-direction: column;
+}
+
+#createAnnouncements {
+  grid-column: 1/ span 3;
+}
+
+#editProfile {
+  width: 100%;
+  height: 100%;
+  grid-column: 1 / span 2;
+  display: flex;
+  flex-direction: column;
+}
+
+#walkingStats {
+  height: 100%;
+  grid-column: 1 / span 3;
+}
+
+#editProfile .content {
+  padding: 1rem;
+}
+
+#editProfile .content>.buttonGroup {
+  justify-content: center;
+  width: 40%;
+}
+
+#newsfeed th {
+  width: auto;
+  padding: .5rem 1.5rem;
+  white-space: nowrap;
+}
+
+#announcementsFeed th:nth-child(n) {
+  padding: .5rem 1.5rem;
+  white-space: nowrap;
+}
+
+#announcementsFeed th:first-child {
+  width: 15%;
+}
+
+#announcementsFeed th:nth-child(2) {
+  width: 10%;
+}
+
+#announcementsFeed th:nth-child(3) {
+  width: auto;
+}
+
+#announcementsFeed th:nth-child(4) {
+  width: 15%;
+}
+
+#main-home {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+/* CLASS STYLING */
 .profileContent {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -55,16 +198,8 @@ main {
   padding: 10px;
 }
 
-.profileContent .rounded
-{
+.profileContent .rounded {
   margin: auto;
-}
-
-figure > img
-{
-  display: block;
-margin-left: auto;
-margin-right: auto;
 }
 
 .news {
@@ -80,11 +215,6 @@ margin-right: auto;
   align-items: center;
   margin-left: 1rem;
   margin-right: 1rem;
-}
-
-span.active, span.semi-active, span.inactive {
-  padding: .75rem;
-  border-radius: 15px;
 }
 
 .news tr {
@@ -228,6 +358,10 @@ span.active, span.semi-active, span.inactive {
   background-color: #BBB !important
 }
 
+.news-selected-darker {
+  background-color: #AAA !important
+}
+
 .news-edit-input {
   display: flex;
   /* align-items: center; */
@@ -249,22 +383,6 @@ span.active, span.semi-active, span.inactive {
   background-color: var(--navbar-topMenu-active);
   border-radius: 0 0 10px 10px;
   padding: .25rem;
-}
-
-#announcements {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem 1rem;
-}
-
-#announcementsFeed {
-  grid-column: 1 / span 2;
-  display: flex;
-  flex-direction: column;
-}
-
-#createAnnouncements {
-  grid-column: 1/ span 3;
 }
 
 .container {
@@ -305,24 +423,6 @@ span.active, span.semi-active, span.inactive {
   background-color: var(--primary);
 }
 
-section {
-  width: 100%;
-  height: 100%;
-}
-
-#editProfile {
-  width: 100%;
-  height: 100%;
-  grid-column: 1 / span 2;
-  display: flex;
-  flex-direction: column;
-}
-
-#walkingStats {
-  height: 100%;
-  grid-column: 1 / span 3;
-}
-
 .profileInformation {
   max-width: 100%;
   grid-row: 0 / -1;
@@ -343,15 +443,6 @@ section {
   justify-content: space-around;
 }
 
-#editProfile .content {
-  padding: 1rem;
-}
-
-#editProfile .content>.buttonGroup {
-  justify-content: center;
-  width: 40%;
-}
-
 .content {
   max-width: 100%;
   max-height: 100%;
@@ -370,20 +461,6 @@ section {
   overflow-y: auto;
 }
 
-figure {
-  margin: 0;
-  padding: 0.5rem 1rem;
-}
-
-figcaption {
-  text-align: center;
-  font-size: 16px;
-}
-
-img {
-  max-width: 100%;
-}
-
 .rounded {
   border-radius: 50%;
 }
@@ -398,42 +475,6 @@ img {
   margin: 0;
   text-align: center;
   ;
-}
-
-table {
-  border-spacing: 0px;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  overflow-x: auto;
-}
-
-thead tr {
-  background-color: var(--darker);
-}
-
-tr {
-  background-color: var(--primary);
-}
-
-tr:nth-child(2n) {
-  background-color: var(--secondary);
-}
-
-th {
-  text-align: center;
-  padding: 10px;
-}
-
-td {
-  padding: 5px;
-  text-align: center;
-  font-size: 16px;
-  font-family: "Calibri";
-}
-
-td>img {
-  max-width: 100%;
 }
 
 .active {
@@ -460,86 +501,51 @@ td>img {
   /* background-color: red; */
 }
 
-#newsfeed th {
-  width: auto;
-  padding: .5rem 1.5rem;
-  white-space: nowrap;
-}
-
 .newsPost-contents {
   display: flex;
   flex-direction: column;
   background-color: #BBB;
 }
 
-#announcementsFeed th:nth-child(n)
-{
-  width: 15%;
-}
-
-#announcementsFeed th:nth-child(3)
-{
-  width: auto;
-}
-
-
-#main-login
-{
-  margin: 0;
-}
-
-.banner
-{
+.banner {
   padding: .25rem;
 }
 
-.column
-{
+.column {
   display: flex;
   flex-direction: column;
 }
 
-.login-contents
-{
+.login-contents {
   background-color: #BBB;
   padding: 1rem;
 }
-.section-contents
-{
+
+.section-contents {
   background-color: #BBB;
   padding: .5rem;
 }
 
-.section-contents .row, .section-contents .flex-row
-{
+.section-contents .row, .section-contents .flex-row {
   padding: .25rem 0;
 }
 
-.figure-container
-{
+.figure-container {
   background-color: #CCC;
   border-radius: .5rem;
   padding: 10px;
   border: 2px solid #AAA;
 }
 
-.figure-container:hover
-{
+.figure-container:hover {
   background-color: #AAA;
 }
-.figure-container > figcaption
-{
+
+.figure-container>figcaption {
   padding: .5rem 0 0 0;
   /* background-color: #BBB; */
 }
 
-.flex-row
-{
+.flex-row {
   display: flex;
-}
-
-#main-home
-{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
