--- a/Question 1/res/css/style.css
+++ b/Question 1/res/css/style.css
@@ -1,6 +1,6 @@
-@import "components/navbar.css";
+/* @import "components/navbar.css";
 @import "components/buttons.css";
-@import "components/input.css";
+@import "components/input.css"; */
 
 :root {
   font-size: 18px;
@@ -548,4 +548,250 @@ td>img {
 
 .flex-row {
   display: flex;
+}
+
+/* BUTTON STYLING */
+button, .btn {
+  padding: 0;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  max-width: 100%;
+  max-height: 100%;
+  text-align: center;
+  cursor: pointer;
+  margin: 5px;
+  text-decoration: none;
+  color: inherit;
+  white-space: nowrap;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+button:hover, .btn:hover, button:focus, .btn:focus {
+  filter: brightness(110%);
+  border: none;
+  outline: none;
+}
+
+.btn-approve {
+  background-color: green;
+  color: white;
+}
+
+.btn-deny {
+  background-color: red;
+  color: white;
+}
+
+.btn-edit {
+  background-color: orange;
+}
+
+.buttonGroup {
+  display: flex;
+  justify-content: center;
+}
+
+.bg-stretch {
+  width: 100%;
+}
+
+.btn-chevron {
+  padding: 0;
+  margin: 0;
+  background: none;
+  transition: transform 250ms;
+}
+
+.btn-chevron:hover {
+  transform: rotate(180deg);
+}
+
+.buttonGroup-vertical {
+  flex-direction: column;
+  max-width: 100%;
+}
+
+/* INPUT STYLING */
+.input-group {
+  max-width: 100%;
+  max-height: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.input-group-vertical {
+  max-width: 100%;
+  max-height: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.input-group input {
+  font-family: "Calibri";
+  height: 100%;
+  max-width: 100%;
+  width: 100%;
+  font-size: inherit;
+  border: 0;
+  border-radius: 0 10px 10px 0;
+  margin: 5px 0;
+  padding: 0 .5rem;
+  outline: none;
+  background-color: white;
+}
+
+.input-group input[type='file'] {
+  text-align: center;
+  text-indent: -999em;
+  outline: none;
+  cursor: pointer;
+}
+
+.input-group span, .input-group-vertical span, .input-group label, .input-group-vertical label {
+  height: 100%;
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
+  font-size: inherit;
+  background-color: gray;
+  border-radius: 10px 0 0 10px;
+  margin: 5px 0;
+  padding: 0 .5rem;
+  white-space: nowrap;
+}
+
+.input-group select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  text-align: center;
+  border-radius: 0 10px 10px 0;
+  outline: 0;
+  border: 0;
+  margin: 5px 0;
+  padding: 0 .5rem;
+}
+
+.span-top {
+  border-radius: 10px 10px 0 0 !important;
+  width: 100%;
+  display: flex !important;
+  justify-content: center;
+  text-align: center;
+  padding: 10px 0 !important;
+  margin: 0 !important;
+}
+
+.input-group-vertical textarea {
+  font-family: "Calibri";
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+  font-size: inherit;
+  border: 0;
+  border-radius: 0 0 10px 10px;
+  margin: 0;
+  outline: none;
+  resize: none;
+}
+
+.input-group-vertical .container {
+  display: flex;
+  width: 100%;
+}
+
+.input-group input:focus, .input-group input:hover, .input-group-vertical textarea:focus, .input-group-vertical textarea:hover, .input-group select:focus, .input-group select:hover {
+  background-color: lightgray;
+}
+
+/* NAVBAR STYING */
+.nav-mainMenu {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 15rem;
+  background-color: #1F618D;
+  position: fixed;
+}
+
+.nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.nav-logo {
+  padding: 5px 0;
+}
+
+.nav-bottom {
+  margin-top: auto;
+  margin-bottom: 5px;
+}
+
+.nav-item {
+  width: 100%;
+}
+
+.nav-item:hover {
+  background-color: #1A5276;
+}
+
+.nav-item-active {
+  background-color: #1A5276;
+}
+
+.nav-subitem-active {
+  background-color: #154360;
+}
+
+.nav-link {
+  text-decoration: none;
+  padding: 0.5rem 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.nav-link span {
+  padding: 0 .75rem;
+  color: white;
+}
+
+.navbar-topMenu {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.nav-dropdown {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding-left: 2rem;
+}
+
+.nav-dropdown>.nav-item:hover {
+  background-color: #154360;
+}
+
+.nav-topMenu ul>li>a {
+  display: flex;
+  align-items: center;
 }
