--- a/Question 1/res/css/style.css
+++ b/Question 1/res/css/style.css
@@ -379,7 +379,7 @@ td>img {
   background-color: inherit !important;
 }
 
-.sectionFooter {
+.section-footer {
   background-color: var(--navbar-topMenu-active);
   border-radius: 0 0 10px 10px;
   padding: .25rem;
@@ -465,13 +465,13 @@ td>img {
   border-radius: 50%;
 }
 
-.sectionHeader {
+.section-header {
   border-radius: 10px 10px 0 0;
   background-color: var(--navbar-topMenu-active);
   padding: 15px 1rem;
 }
 
-.sectionHeader>h1 {
+.section-header>h1 {
   margin: 0;
   text-align: center;
   ;
